--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Aplikasi Fintech</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="Prodi">
+        <item>--Pilih--</item>
+        <item>Manajemen Informatika</item>
+        <item>Teknologi Informatika</item>
+        <item>Teknologi Informasi</item>
+        <item>Sistem Informasi</item>
+        <item>Teknik Komputer</item>
+    </string-array>
 </resources>
